# PX4-Autopilot

./: Makefile
.ci/: Jenkinsfile-compile
ROMFS/ctusr_common/init.d/: CMakeLists.txt  rc.mavlink  rcS
ROMFS/ctusrfmu_common/init.d/: CMakeLists.txt  rc.mavlink  rcS
ROMFS/ctusrfmu_common/init.d-posix/: CMakeLists.txt  px4-rc.mavlink  px4-rc.params  rcS
Tools/: px_uploader.py
boards/ctusr/cimrman-v1/: default.px4board  firmware.prototype
boards/ctusr/cimrman-v1/cmake/: upload.cmake
boards/ctusr/cimrman-v1/nuttx-config/bootloader/: defconfig
boards/ctusr/cimrman-v1/nuttx-config/include/: board.h
boards/ctusr/cimrman-v1/nuttx-config/nsh/: defconfig
boards/ctusr/cimrman-v1/nuttx-config/scripts/: bootloader_script.ld  script.ld
boards/ctusr/cimrman-v1/src/: CMakeLists.txt  board_config.h  bootloader_main.c  hw_config.h  init.c  led.c  pwm.c  sdio.c  spi.cpp  timer_config.cpp
boards/ctusr/nucleo-f439/: default.px4board  firmware.prototype
boards/ctusr/nucleo-f439/init/: rc.board_extras  rc.board_sensors
boards/ctusr/nucleo-f439/nuttx-config/: Kconfig
boards/ctusr/nucleo-f439/nuttx-config/include/: board.h
boards/ctusr/nucleo-f439/nuttx-config/nsh/: defconfig
boards/ctusr/nucleo-f439/src/: CMakeLists.txt  board_config.h  hw_config.h  init.c  led.c
boards/ctusr/sitl/: default.px4board
boards/ctusr/sitl/src/: CMakeLists.txt  board_config.h  board_shutdown.cpp
boards/ctusr/utils/message_definitions/: rocket.xml
boards/px4/fmu-v4/: default.px4board  firmware.prototype
boards/px4/fmu-v4/nuttx-config/nsh/: defconfig
boards/px4/fmu-v4/src/: CMakeLists.txt  init.c
msg/: CMakeLists.txt  RocketState.msg
src/drivers/imu/invensense/icm20948/: CMakeLists.txt
src/modules/mavlink/: mavlink_main.cpp  mavlink_messages.cpp  mavlink_receiver.cpp  mavlink_receiver.h
src/modules/mavlink/streams/: ROCKET_STATE.hpp
src/modules/record_data/: CMakeLists.txt  Kconfig  RecordData.cpp  RecordData.hpp  module.yaml
src/modules/rocket_commander/: CMakeLists.txt  Kconfig  RocketCommander.cpp  RocketCommander.hpp  module.yaml
